--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,9 @@ img {
   padding: 0 2rem;
 }
 
-.btn{
+.btn {
   display: inline-block;
-  padding: 1.6rem 2.6rem;
+  padding: 1.3rem 2.3rem;
   border: 1px solid var(--secondary-color);
   border-radius: 32px;
   background: var(--secondary-color);
@@ -56,15 +56,40 @@ img {
   transition: all 0.2s;
 }
 
-.btn:hover{
-  background:var(--primary-color);
+.btn:hover {
+  background: var(--primary-color);
   color: white;
   border-color: white;
+}
+
+/* Section Header */
+.section-header {
+  max-width: 750px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.section-header h2{
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--dark-color);
+  margin-bottom: 0.5rem;
+}
+.section-header p{
+  font-size: 1.2rem;
+  color: var(--dark-color);
+} 
+.heading-border{
+  width: 64px;
+  height: 4px;
+  background: var(--primary-color);
+  margin: 0 auto 2rem;
 }
 /* Navbar */
 
 .navbar {
-  background: black;
+  background: transparent;
   color: white;
   padding: 1rem 2rem;
   position: fixed;
@@ -73,6 +98,11 @@ img {
   left: 0;
   z-index: 1000;
   transition: background-color 0.3s ease-in-out;
+}
+
+.navbar.navbar-scroll {
+  background-color: rgba(235, 77, 85, 0.8);
+  backdrop-filter: blur(10px);
 }
 
 .navbar-flex {
@@ -167,22 +197,86 @@ img {
   margin-bottom: 1rem;
 }
 
-.hero p{
+.hero p {
   font-size: 1.2rem;
   margin-bottom: 2rem;
   line-height: 1.8;
   font-weight: 400;
 }
 
-.hero img{
+.hero img {
   width: 100%;
   margin-right: -100px;
 }
 
+.hero .frame-decoration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
+
+/* Learn Topics */
+.topics{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+.topic img:hover{
+  transform: scale(1.1);
+}
+
+.topic img{
+  transition: transform 0.3s;
+}
+
+.topic h3{
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0.5rem 0 ;
+}
+
 /* Media Queries */
 @media (max-width: 1200px) {
+  .hero .hero-flex {
+    gap: 2rem;
+  }
+  .hero img {
+    max-width: 500px;
+    margin-right: 0;
+  }
+
+  .hero h1 {
+    font-size: 3rem;
+  }
+
+  .topics{
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 @media (max-width: 992px) {
+  .navbar .container {
+    padding: 0;
+  }
+  .navbar img {
+    margin-right: 2rem;
+  }
+  .hero {
+    text-align: center;
+  }
+  .hero .hero-flex {
+    flex-direction: column;
+    padding-bottom: 4rem;
+  }
+  .hero img {
+    max-width: 600px;
+    margin-top: 2rem;
+  }
+  .topics{
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 @media (max-width: 768px) {
   .main-menu-items {
@@ -196,6 +290,20 @@ img {
     display: block;
     padding: 10px;
   }
+  
 }
 @media (max-width: 576px) {
+  .hero {
+    padding-right: 0.2rem;
+    padding-left: 0.2rem;
+  }
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+  .hero img {
+    max-width: 350px;
+  }
+  .topics{
+    grid-template-columns: 1fr;
+  }
 }
