--- a/css/styles.css
+++ b/css/styles.css
@@ -62,12 +62,21 @@ img {
   border-color: white;
 }
 
-.section{
+/* Text Classes */
+.text-primary {
+  color: var(--primary-color);
+}
+
+.text-secondary {
+  color: var(--secondary-color);
+}
+
+.section {
   margin: 4rem 0;
 }
 
 /* Card */
-.card{
+.card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -85,17 +94,17 @@ img {
   margin-bottom: 3rem;
 }
 
-.section-header h2{
+.section-header h2 {
   font-size: 2rem;
   font-weight: 700;
   color: var(--dark-color);
   margin-bottom: 0.5rem;
 }
-.section-header p{
+.section-header p {
   font-size: 1.2rem;
   color: var(--dark-color);
-} 
-.heading-border{
+}
+.heading-border {
   width: 64px;
   height: 4px;
   background: var(--primary-color);
@@ -233,59 +242,58 @@ img {
 }
 
 /* Learn Topics */
-.topics{
+.topics {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
 }
 
-.topic img:hover{
+.topic img:hover {
   transform: scale(1.1);
 }
 
-.topic img{
+.topic img {
   transition: transform 0.3s;
 }
 
-.topic h3{
+.topic h3 {
   font-size: 1rem;
   font-weight: 700;
-  margin: 0.5rem 0 ;
+  margin: 0.5rem 0;
 }
 
-
 /* Chapter Cards */
-.chapter-cards{
+.chapter-cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   padding: 1rem 2rem 4rem;
 }
 
-.chapter-cards img{
+.chapter-cards img {
   width: 130px;
   margin-top: 1rem;
 }
 
-.chapter-cards h3{
+.chapter-cards h3 {
   font-size: 1.25rem;
   font-weight: 700;
   margin: 1rem 0;
 }
 
 /* Summary */
-.summary{
+.summary {
   background: var(--light-color);
   color: var(--dark-color);
   padding: 4rem 2rem 5rem;
 }
 
-.summary .section-list{
+.summary .section-list {
   background: white;
   padding: 2rem;
 }
 
-.summary .list-header{
+.summary .list-header {
   background: var(--primary-color);
   color: white;
   padding: 0.5rem 1rem;
@@ -294,13 +302,114 @@ img {
   margin: 1rem 0;
 }
 
-.summary .list-item{
+.summary .list-item {
   padding: 1.4rem;
   border-bottom: 1px solid #f1f4f6;
 }
-.summary .list-item:last-child{
-border-bottom: none;
+.summary .list-item:last-child {
+  border-bottom: none;
 }
+
+/* Info Section */
+.info-container {
+  background: url('../images/audience.jpg') top center/cover no-repeat;
+  display: flex;
+}
+
+.info-content {
+  background-color: var(--primary-color);
+  color: white;
+  flex: 1;
+  padding: 4rem;
+}
+
+.info-content h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  font-weight: 700;
+}
+
+.info-content p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.info-content ul li {
+  font-size: 1.2rem;
+  line-height: 2;
+}
+
+.info-content i {
+  margin-right: 0.5rem;
+  color: var(--secondary-color);
+}
+
+.info-left {
+  width: 50%;
+}
+
+/* Takeaways */
+
+.takeaways-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding: 1.5rem;
+}
+
+.takeaways-cards .card {
+  flex-direction: row;
+  text-align: left;
+}
+
+.takeaways-cards .card i {
+  margin-right: 1rem;
+}
+
+/* Details */
+.details .details-flex {
+  display: flex;
+  gap: 4rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.details img {
+  width: 100%;
+  max-width: 500px;
+}
+
+.details h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.details .heading-border {
+  margin: 0;
+}
+
+.details p {
+  margin: 1rem 0 2rem;
+}
+
+/* Author */
+.details + .details .details-flex {
+  flex-direction: row-reverse;
+}
+
+.details ul {
+  margin-bottom: 2rem;
+}
+
+.details ul li {
+  line-height: 2;
+}
+
+.details i{
+  margin-right: 0.5rem;
+}
+
 /* Media Queries */
 @media (max-width: 1200px) {
   .hero .hero-flex {
@@ -315,7 +424,7 @@ border-bottom: none;
     font-size: 3rem;
   }
 
-  .topics{
+  .topics {
     grid-template-columns: repeat(3, 1fr);
   }
 }
@@ -332,12 +441,20 @@ border-bottom: none;
     max-width: 600px;
     margin-top: 2rem;
   }
-  .topics{
+  .topics {
     grid-template-columns: repeat(2, 1fr);
   }
-  .chapter-cards{
+  .chapter-cards {
     grid-template-columns: 1fr;
   }
+  .takeaways-cards {
+    grid-template-columns: 1fr;
+  }
+  .details-flex, .details + .details .details-flex{
+    flex-direction: column;
+    gap: 2rem;
+  }
+  
 }
 @media (max-width: 768px) {
   .main-menu-items {
@@ -351,7 +468,22 @@ border-bottom: none;
     display: block;
     padding: 10px;
   }
-  
+  .info-container {
+    flex-direction: column;
+  }
+  .info-content {
+    padding: 2rem;
+  }
+
+  .info-content h2 {
+    font-size: 1.5rem;
+  }
+  .info-content p {
+    font-size: 1rem;
+  }
+  .info-left {
+    display: none;
+  }
 }
 @media (max-width: 576px) {
   .hero {
@@ -364,11 +496,11 @@ border-bottom: none;
   .hero img {
     max-width: 350px;
   }
-  .topics{
+  .topics {
     grid-template-columns: 1fr;
   }
 
-  .summary .container{
+  .summary .container {
     padding: 0;
   }
 }
