--- a/css/styles.css
+++ b/css/styles.css
@@ -406,8 +406,223 @@ img {
   line-height: 2;
 }
 
-.details i{
+.details i {
   margin-right: 0.5rem;
+}
+
+/* Stats */
+.stats {
+  background: #000 url('../images/stats-background.jpg') center center/cover
+    no-repeat;
+  color: white;
+}
+.stats-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4rem 2rem;
+}
+.stats img {
+  width: 100%;
+  max-width: 500px;
+}
+
+.stats-content {
+  max-width: 500px;
+}
+
+.stats .stats-numbers {
+  display: flex;
+  gap: 2rem;
+  margin: 2rem 0;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.stats .stats-numbers h3 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+.stats .stats-numbers p {
+  font-size: 0.8rem;
+}
+
+.stats .stats-text {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+.stats .btn {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 200px;
+}
+
+/* Newsletter */
+.newsletter {
+  text-align: center;
+  margin: 0 2rem;
+}
+.newsletter-flex {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--light-color);
+  border: 1px solid #eee;
+  padding: 4rem 2rem;
+}
+
+.newsletter h2 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.newsletter p {
+  max-width: 600px;
+}
+
+.newsletter input[type='email'] {
+  padding: 1rem 2rem;
+  border: 1px solid #ccc;
+  width: 100%;
+  border-radius: 32px;
+  max-width: 400px;
+  margin: 1rem 0;
+}
+
+/* Social */
+.social {
+  background-color: var(--dark-color);
+  color: white;
+  padding: 6rem 2rem;
+  text-align: center;
+  font-size: 1.7rem;
+  margin-bottom: 0;
+}
+
+.social a {
+  color: white;
+  transition: 1s ease-in;
+}
+
+.social a:hover,
+.footer a:hover {
+  color: var(--primary-color);
+}
+
+.social p {
+  margin-bottom: 2rem;
+}
+
+.social .social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+/* Footer */
+.footer {
+  background: var(--dark-color);
+  color: white;
+  border-top: 1px solid #384653;
+  padding: 0.5rem 2rem;
+}
+
+.footer .footer-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer .footer-flex a {
+  color: white;
+}
+
+.footer ul {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 2rem 0;
+}
+
+/* Inner Header */
+.inner-header {
+  background: var(--primary-color);
+  color: white;
+  height: 250px;
+  padding-top: 8rem;
+}
+
+.inner-header h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+/* Contact Form */
+.contact-form p {
+  margin-bottom: 3rem;
+}
+
+.contact-form input,
+.contact-form textarea {
+  font-family: inherit;
+  font-size: medium;
+  display: block;
+  width: 100%;
+  margin: 1.5rem 0;
+  border: 1px solid #ccc;
+  padding: 1.2rem 1rem;
+}
+
+.contact-form textarea{
+  height: 200px;
+}
+
+.contact-form .btn{
+  display: block;
+  width: 100%;
+  font-size: inherit;
+  font-family: inherit;
+  margin: 0 auto;
+}
+
+/* Location */
+.location h2{
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.location p{
+  margin-bottom: 2rem;
+}
+
+.location .map{
+  overflow: hidden;
+  position: relative;
+  height: 0;
+  margin-bottom: 3rem;
+  padding-bottom: 50%;
+  border-radius: 0.25rem;
+}
+
+.location .map iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+
 }
 
 /* Media Queries */
@@ -444,20 +659,20 @@ img {
   .topics {
     grid-template-columns: repeat(2, 1fr);
   }
-  .chapter-cards {
+  .takeaways-cards .chapter-cards {
     grid-template-columns: 1fr;
   }
-  .takeaways-cards {
-    grid-template-columns: 1fr;
-  }
-  .details-flex, .details + .details .details-flex{
+  .details-flex,
+  .details + .details .details-flex,
+  .stats .stats-flex {
     flex-direction: column;
     gap: 2rem;
   }
-  
 }
+
 @media (max-width: 768px) {
-  .main-menu-items {
+  .main-menu-items,
+  .info-left {
     display: none;
   }
   .navbar .mobile-menu {
@@ -481,8 +696,25 @@ img {
   .info-content p {
     font-size: 1rem;
   }
-  .info-left {
-    display: none;
+  .social .social-icons {
+    flex-wrap: wrap;
+  }
+
+  .footer .footer-flex {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer {
+    padding: 0.5rem 1rem;
+  }
+
+  .social p {
+    font-size: 1.2rem;
+  }
+
+  .social i {
+    font-size: 2rem;
   }
 }
 @media (max-width: 576px) {
@@ -502,5 +734,17 @@ img {
 
   .summary .container {
     padding: 0;
+  }
+
+  .stats .stats-numbers {
+    flex-direction: column;
+  }
+
+  .newsletter h2 {
+    font-size: 1.5rem;
+  }
+
+  .newsletter p {
+    display: none;
   }
 }
