--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 
 html,
 body {
-  font-family: 'P';
+  font-family: 'Open Sans';
   scroll-behavior: smooth;
   line-height: 1.6;
 }
@@ -198,7 +198,7 @@ img {
 /* Hero */
 
 .hero {
-  background: black url(../images/header-background.jpg) center center/cover
+  background: #000 url('../images/header-background.jpg') center center/cover
     no-repeat;
   padding: 11.5rem 2rem 8rem;
   color: white;
@@ -583,11 +583,11 @@ img {
   padding: 1.2rem 1rem;
 }
 
-.contact-form textarea{
+.contact-form textarea {
   height: 200px;
 }
 
-.contact-form .btn{
+.contact-form .btn {
   display: block;
   width: 100%;
   font-size: inherit;
@@ -596,17 +596,17 @@ img {
 }
 
 /* Location */
-.location h2{
+.location h2 {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 1rem;
 }
 
-.location p{
+.location p {
   margin-bottom: 2rem;
 }
 
-.location .map{
+.location .map {
   overflow: hidden;
   position: relative;
   height: 0;
@@ -615,14 +615,13 @@ img {
   border-radius: 0.25rem;
 }
 
-.location .map iframe{
+.location .map iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   border: none;
-
 }
 
 /* Media Queries */
@@ -630,6 +629,7 @@ img {
   .hero .hero-flex {
     gap: 2rem;
   }
+
   .hero img {
     max-width: 500px;
     margin-right: 0;
@@ -659,9 +659,10 @@ img {
   .topics {
     grid-template-columns: repeat(2, 1fr);
   }
-  .takeaways-cards .chapter-cards {
+  .takeaways-cards, .chapter-cards {
     grid-template-columns: 1fr;
   }
+
   .details-flex,
   .details + .details .details-flex,
   .stats .stats-flex {
@@ -669,6 +670,7 @@ img {
     gap: 2rem;
   }
 }
+
 
 @media (max-width: 768px) {
   .main-menu-items,
@@ -700,15 +702,6 @@ img {
     flex-wrap: wrap;
   }
 
-  .footer .footer-flex {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .footer {
-    padding: 0.5rem 1rem;
-  }
-
   .social p {
     font-size: 1.2rem;
   }
@@ -716,7 +709,17 @@ img {
   .social i {
     font-size: 2rem;
   }
+
+  .footer {
+    padding: 0.5rem 1rem;
+  }
+
+  .footer .footer-flex {
+    flex-direction: column;
+    text-align: center;
+  }
 }
+
 @media (max-width: 576px) {
   .hero {
     padding-right: 0.2rem;
